Hook up angular app module to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>TownHall</title>
     <!-- CSS Files -->
-    <link href='bower_components/bootstrap//dist/css/bootstrap.css' rel='stylesheet'>
+    <link href='lib/bootstrap/dist/css/bootstrap.css' rel='stylesheet'>
     <link href='style.css' rel='stylesheet'>
   </head>
   <body ng-app='mvp'>
@@ -69,9 +69,13 @@
       </div>
     </div>
   <!-- Javascript Files! -->
-  <script src='bower_components/jquery/dist/jquery.min.js'></script>
-  <script src='bower_components/bootstrap/dist/js/bootstrap.min.js'></script>
+  <script src='lib/jquery/dist/jquery.min.js'></script>
+  <script src='lib/bootstrap/dist/js/bootstrap.min.js'></script>
   <!-- Angular Files -->
-  <script src='bower_components/angular/angular.min.js'></script>
-  <script src='bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
+  <script src='lib/angular/angular.min.js'></script>
+  <script src="lib/angular-route/angular-route.js"></script>
+  <script src='lib/angular-ui-router/release/angular-ui-router.min.js'></script>
+  <!-- Source Files -->
+  <script src='app/app.js'></script>
+  <script src='app/questions/submit.js'></script>
   </body>
