--- a/client/index.html
+++ b/client/index.html
@@ -45,9 +45,12 @@
 
       <div class='row events-view'>
 
-        <div class='public-events col-md-8'>
+        <div class='public-events col-md-8' ng-controller='DisplayController'>
           <div class='row event-list well'></div>
         </div>
+
+
+    <!-- QUESTION SUBMITTAL -->
 
         <div class='question-submit col-md-3 col-md-offset-1' ng-controller='SubmitController'>
           <form novalidate>
@@ -58,6 +61,8 @@
             </button>
           </form>
         </div>
+
+
 
       </div>  
 
@@ -79,4 +84,5 @@
   <script src='app/app.js'></script>
   <script src='app/services/factory.js'></script>
   <script src='app/questions/submit.js'></script>
+  <script src='app/questions/display.js'></script>
   </body>
