--- a/client/index.html
+++ b/client/index.html
@@ -45,11 +45,11 @@
 
       <div class='row events-view'>
 
-        <div class='public-events col-md-8' ng-controller='DisplayController'>
-          <div class='row event-list well'>
-            <div ng-repeat='question in questions'>
-              {{question.name}}: 
-              {{question.text}}
+        <div class='public-events col-md-8 well' ng-controller='DisplayController'>
+          <div class='row event-list'>
+            <div ng-repeat='question in questions | orderBy:"upvotes" ' class='question'>
+              <strong>{{question.name}}</strong>: {{question.text}}
+              <span class='upvotes' ng-click='log(question)'>Upvote! {{question.upvotes}}</span>
             </div>
 
           </div>
@@ -58,11 +58,11 @@
 
     <!-- QUESTION SUBMITTAL -->
 
-        <div class='question-submit col-md-3 col-md-offset-1' ng-controller='SubmitController'>
-          <form novalidate>
-            <input type='text' ng-model='name' placeholder='Name' id='name-entry'>
-            <input type='text' ng-model='questionText' placeholder='Questions' id='question-entry'>
-            <button type='button' class='btn btn-primary' ng-click='submit(); name=""; questionText="" '>
+        <div class='question-submit col-md-3 col-md-offset-1' ng-controller='SubmitController' >
+          <form ng-model='questionSubmit' name='questionSubmit' ng-submit='submit(questionSubmit.$valid)' novalidate>
+            <input type='text' ng-model='name' placeholder='Name' id='name-entry' required/>
+            <input type='text' ng-model='questionText' placeholder='Questions' id='question-entry' required/>
+            <button type='submit' class='btn btn-primary'>
               Submit Question!
             </button>
           </form>
