--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,7 @@
           <div class='row event-list'>
             <div ng-repeat='question in questions | orderBy:"upvotes" ' class='question'>
               <strong>{{question.name}}</strong>: {{question.text}}
-              <span class='upvotes' ng-click='log(question)'>Upvote! {{question.upvotes}}</span>
+              <span class='upvotes' ng-click='log(question); upvote(question)'>Upvote! {{question.upvotes}}</span>
             </div>
 
           </div>
