--- a/client/index.html
+++ b/client/index.html
@@ -47,7 +47,7 @@
 
         <div class='public-events col-md-8 well' ng-controller='DisplayController'>
           <div class='row event-list'>
-            <div ng-repeat='question in questions | orderBy:"upvotes" ' class='question'>
+            <div ng-repeat='question in questions | orderBy:"-upvotes" ' class='question'>
               <strong>{{question.name}}</strong>: {{question.text}}
               <span class='upvotes' ng-click='log(question); upvote(question)'>Upvote! {{question.upvotes}}</span>
             </div>
