Fix delete button size

--- a/client/index.html
+++ b/client/index.html
@@ -82,7 +82,7 @@
             <div><strong>{{newestQuestion.name}}: </strong>{{newestQuestion.text}}</div>
             <br>
             <div ng-click='upvote(newestQuestion)'>Upvote! {{newestQuestion.upvotes}}</div>
-            <div ng-click='delete(newestQuestion)'>Delete!</div>
+            <div class='newDelete' ng-click='delete(newestQuestion)'>Delete!</div>
           </div>  
 
         </div>
