--- a/client/index.html
+++ b/client/index.html
@@ -45,17 +45,17 @@
 
       <div class='row events-view'>
 
-    <!-- MAIN QUESTIONS -->
+    <!-- QUESTIONS DISPLAY -->
 
         <div class='public-events col-md-8 well' ng-controller='DisplayController'>
-          <h1>Questions</h1>
+          <h1 ng-click='log(questions)'>Questions</h1>
           <div class='row event-list'>
             <div ng-repeat='question in questions | orderBy:"-upvotes" ' class='question'>
               <strong ng-dblclick='log(question)'>{{question.name}}</strong>:
               <span ng-model='editableQuestion' contenteditable="true" required> {{question.text}}</span>
               <span class='upvotes' ng-click='log(question); upvote(question)'>Upvote! {{question.upvotes}}</span>
               <div class='delete' ng-click='delete(question)'>Delete!</div>
-              <div ng-show='question.text'>Save Changes!</div>
+              <!-- <div ng-show='question.text'>Save Changes!</div> -->
             </div>
 
           </div>
