Set up editable questions. Need to put to server.

--- a/client/index.html
+++ b/client/index.html
@@ -52,7 +52,7 @@
           <div class='row event-list'>
             <div ng-repeat='question in questions | orderBy:"-upvotes" ' class='question'>
               <strong ng-dblclick='log(question)'>{{question.name}}</strong>:
-              <span ng-model='editableQuestion' contenteditable="true" required> {{question.text}}</span>
+              <span id='questionEdit' ng-blur ='log(question, $event)' contenteditable="true" required> {{question.text}}</span>
               <span class='upvotes' ng-click='log(question); upvote(question)'>Upvote! {{question.upvotes}}</span>
               <div class='delete' ng-click='delete(question)'>Delete!</div>
               <!-- <div ng-show='question.text'>Save Changes!</div> -->
@@ -111,4 +111,5 @@
   <script src='app/services/factory.js'></script>
   <script src='app/questions/submit.js'></script>
   <script src='app/questions/display.js'></script>
+  <!-- // <script src='app/directives.js'></script> -->
   </body>
